Test/git-issues/git-issue-859b.dfy.expect
git-issue-859b.dfy(29,8): Error: ghost variables such as ss are allowed only in specification contexts. ss was inferred to be ghost based on its use or declaration.
git-issue-859b.dfy(29,12): Error: ghost variables such as sss are allowed only in specification contexts. sss was inferred to be ghost based on its use or declaration.
git-issue-859b.dfy(35,8): Error: ghost variables such as s4 are allowed only in specification contexts. s4 was inferred to be ghost based on its use or declaration.
git-issue-859b.dfy(35,12): Error: ghost variables such as s4 are allowed only in specification contexts. s4 was inferred to be ghost based on its use or declaration.
4 resolution/type errors detected in git-issue-859b.dfy
